--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "markdown tree",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "tsc",
+    "build": "npx webpack",
+    "lint": "npx eslint . --ext .js, .jsx,.ts,.tsx",
+    "test": "npx jest",
+    "test-c": "npx jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -21,6 +25,17 @@
   },
   "homepage": "https://github.com/includeMaple/md-tools-pl#readme",
   "devDependencies": {
-    "typescript": "^4.9.4"
+    "@types/jest": "^29.2.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
+    "postcss-loader": "^7.0.2",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
