--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/src/index.ts",
+      // "program": "${workspaceFolder}/src/index.ts",
+      "program": "${workspaceFolder}/src/serve/index.ts",
       "outFiles": [
         "${workspaceFolder}/**/*.js",
         "!**/node_modules/**"
