阶段性完成

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      // "program": "${workspaceFolder}/src/index.ts",
-      "program": "${workspaceFolder}/src/serve/http.ts",
+      "program": "${workspaceFolder}/src/index.ts",
+      // "program": "${workspaceFolder}/src/serve/http.ts",
       "outFiles": [
         "${workspaceFolder}/**/*.js",
         "!**/node_modules/**"
